--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Hess_Law.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Hess_Law.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "hide-input"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,78 +138,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_1a11b_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Formula</th>        <th class=\"col_heading level0 col1\" >$$\\Delta {G}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta {H}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_d78d7_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Formula</th>        <th class=\"col_heading level0 col1\" >$$\\Delta G^o\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta H^o\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^o\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_1a11b_row0_col0\" class=\"data row0 col0\" >$$Sn$$</td>\n",
-       "                        <td id=\"T_1a11b_row0_col1\" class=\"data row0 col1\" >0.0</td>\n",
-       "                        <td id=\"T_1a11b_row0_col2\" class=\"data row0 col2\" >0.0</td>\n",
-       "                        <td id=\"T_1a11b_row0_col3\" class=\"data row0 col3\" >51.6</td>\n",
+       "                                <td id=\"T_d78d7_row0_col0\" class=\"data row0 col0\" >$$Sn$$</td>\n",
+       "                        <td id=\"T_d78d7_row0_col1\" class=\"data row0 col1\" >0.0</td>\n",
+       "                        <td id=\"T_d78d7_row0_col2\" class=\"data row0 col2\" >0.0</td>\n",
+       "                        <td id=\"T_d78d7_row0_col3\" class=\"data row0 col3\" >51.6</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row1_col0\" class=\"data row1 col0\" >$$O_2$$</td>\n",
-       "                        <td id=\"T_1a11b_row1_col1\" class=\"data row1 col1\" >0.0</td>\n",
-       "                        <td id=\"T_1a11b_row1_col2\" class=\"data row1 col2\" >0.0</td>\n",
-       "                        <td id=\"T_1a11b_row1_col3\" class=\"data row1 col3\" >205.1</td>\n",
+       "                                <td id=\"T_d78d7_row1_col0\" class=\"data row1 col0\" >$$O_2$$</td>\n",
+       "                        <td id=\"T_d78d7_row1_col1\" class=\"data row1 col1\" >0.0</td>\n",
+       "                        <td id=\"T_d78d7_row1_col2\" class=\"data row1 col2\" >0.0</td>\n",
+       "                        <td id=\"T_d78d7_row1_col3\" class=\"data row1 col3\" >205.1</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row2_col0\" class=\"data row2 col0\" >$$SnO_2$$</td>\n",
-       "                        <td id=\"T_1a11b_row2_col1\" class=\"data row2 col1\" >-519.6</td>\n",
-       "                        <td id=\"T_1a11b_row2_col2\" class=\"data row2 col2\" >-580.7</td>\n",
-       "                        <td id=\"T_1a11b_row2_col3\" class=\"data row2 col3\" >52.3</td>\n",
+       "                                <td id=\"T_d78d7_row2_col0\" class=\"data row2 col0\" >$$SnO_2$$</td>\n",
+       "                        <td id=\"T_d78d7_row2_col1\" class=\"data row2 col1\" >-519.6</td>\n",
+       "                        <td id=\"T_d78d7_row2_col2\" class=\"data row2 col2\" >-580.7</td>\n",
+       "                        <td id=\"T_d78d7_row2_col3\" class=\"data row2 col3\" >52.3</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row3_col0\" class=\"data row3 col0\" >$$KCl$$</td>\n",
-       "                        <td id=\"T_1a11b_row3_col1\" class=\"data row3 col1\" >-409.1</td>\n",
-       "                        <td id=\"T_1a11b_row3_col2\" class=\"data row3 col2\" >-436.7</td>\n",
-       "                        <td id=\"T_1a11b_row3_col3\" class=\"data row3 col3\" >82.6</td>\n",
+       "                                <td id=\"T_d78d7_row3_col0\" class=\"data row3 col0\" >$$KCl$$</td>\n",
+       "                        <td id=\"T_d78d7_row3_col1\" class=\"data row3 col1\" >-409.1</td>\n",
+       "                        <td id=\"T_d78d7_row3_col2\" class=\"data row3 col2\" >-436.7</td>\n",
+       "                        <td id=\"T_d78d7_row3_col3\" class=\"data row3 col3\" >82.6</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row4_col0\" class=\"data row4 col0\" >$$K^+$$</td>\n",
-       "                        <td id=\"T_1a11b_row4_col1\" class=\"data row4 col1\" >-283.3</td>\n",
-       "                        <td id=\"T_1a11b_row4_col2\" class=\"data row4 col2\" >-252.4</td>\n",
-       "                        <td id=\"T_1a11b_row4_col3\" class=\"data row4 col3\" >102.5</td>\n",
+       "                                <td id=\"T_d78d7_row4_col0\" class=\"data row4 col0\" >$$K^+$$</td>\n",
+       "                        <td id=\"T_d78d7_row4_col1\" class=\"data row4 col1\" >-283.3</td>\n",
+       "                        <td id=\"T_d78d7_row4_col2\" class=\"data row4 col2\" >-252.4</td>\n",
+       "                        <td id=\"T_d78d7_row4_col3\" class=\"data row4 col3\" >102.5</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row5_col0\" class=\"data row5 col0\" >$$Cl^-$$</td>\n",
-       "                        <td id=\"T_1a11b_row5_col1\" class=\"data row5 col1\" >-131.3</td>\n",
-       "                        <td id=\"T_1a11b_row5_col2\" class=\"data row5 col2\" >-167.2</td>\n",
-       "                        <td id=\"T_1a11b_row5_col3\" class=\"data row5 col3\" >56.5</td>\n",
+       "                                <td id=\"T_d78d7_row5_col0\" class=\"data row5 col0\" >$$Cl^-$$</td>\n",
+       "                        <td id=\"T_d78d7_row5_col1\" class=\"data row5 col1\" >-131.3</td>\n",
+       "                        <td id=\"T_d78d7_row5_col2\" class=\"data row5 col2\" >-167.2</td>\n",
+       "                        <td id=\"T_d78d7_row5_col3\" class=\"data row5 col3\" >56.5</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row6_col0\" class=\"data row6 col0\" >$$FeCO_3$$</td>\n",
-       "                        <td id=\"T_1a11b_row6_col1\" class=\"data row6 col1\" >-666.7</td>\n",
-       "                        <td id=\"T_1a11b_row6_col2\" class=\"data row6 col2\" >-740.6</td>\n",
-       "                        <td id=\"T_1a11b_row6_col3\" class=\"data row6 col3\" >92.9</td>\n",
+       "                                <td id=\"T_d78d7_row6_col0\" class=\"data row6 col0\" >$$FeCO_3$$</td>\n",
+       "                        <td id=\"T_d78d7_row6_col1\" class=\"data row6 col1\" >-666.7</td>\n",
+       "                        <td id=\"T_d78d7_row6_col2\" class=\"data row6 col2\" >-740.6</td>\n",
+       "                        <td id=\"T_d78d7_row6_col3\" class=\"data row6 col3\" >92.9</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row7_col0\" class=\"data row7 col0\" >$$H_2O$$</td>\n",
-       "                        <td id=\"T_1a11b_row7_col1\" class=\"data row7 col1\" >-237.1</td>\n",
-       "                        <td id=\"T_1a11b_row7_col2\" class=\"data row7 col2\" >-285.8</td>\n",
-       "                        <td id=\"T_1a11b_row7_col3\" class=\"data row7 col3\" >69.9</td>\n",
+       "                                <td id=\"T_d78d7_row7_col0\" class=\"data row7 col0\" >$$H_2O$$</td>\n",
+       "                        <td id=\"T_d78d7_row7_col1\" class=\"data row7 col1\" >-237.1</td>\n",
+       "                        <td id=\"T_d78d7_row7_col2\" class=\"data row7 col2\" >-285.8</td>\n",
+       "                        <td id=\"T_d78d7_row7_col3\" class=\"data row7 col3\" >69.9</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row8_col0\" class=\"data row8 col0\" >$$Fe_2O_3$$</td>\n",
-       "                        <td id=\"T_1a11b_row8_col1\" class=\"data row8 col1\" >-742.2</td>\n",
-       "                        <td id=\"T_1a11b_row8_col2\" class=\"data row8 col2\" >-824.2</td>\n",
-       "                        <td id=\"T_1a11b_row8_col3\" class=\"data row8 col3\" >87.4</td>\n",
+       "                                <td id=\"T_d78d7_row8_col0\" class=\"data row8 col0\" >$$Fe_2O_3$$</td>\n",
+       "                        <td id=\"T_d78d7_row8_col1\" class=\"data row8 col1\" >-742.2</td>\n",
+       "                        <td id=\"T_d78d7_row8_col2\" class=\"data row8 col2\" >-824.2</td>\n",
+       "                        <td id=\"T_d78d7_row8_col3\" class=\"data row8 col3\" >87.4</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_1a11b_row9_col0\" class=\"data row9 col0\" >$$H_2CO_3$$</td>\n",
-       "                        <td id=\"T_1a11b_row9_col1\" class=\"data row9 col1\" >-623.1</td>\n",
-       "                        <td id=\"T_1a11b_row9_col2\" class=\"data row9 col2\" >-699.7</td>\n",
-       "                        <td id=\"T_1a11b_row9_col3\" class=\"data row9 col3\" >187.4</td>\n",
+       "                                <td id=\"T_d78d7_row9_col0\" class=\"data row9 col0\" >$$H_2CO_3$$</td>\n",
+       "                        <td id=\"T_d78d7_row9_col1\" class=\"data row9 col1\" >-623.1</td>\n",
+       "                        <td id=\"T_d78d7_row9_col2\" class=\"data row9 col2\" >-699.7</td>\n",
+       "                        <td id=\"T_d78d7_row9_col3\" class=\"data row9 col3\" >187.4</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x24ffb467940>"
+       "<pandas.io.formats.style.Styler at 0x24ffb467640>"
       ]
      },
      "metadata": {},
@@ -232,7 +232,7 @@
     "    '$$S^o\\,(J\\,mol^{-1}K^{-1})$$' : delta_S_data_1,\n",
     "}\n",
     "df1 = pd.DataFrame(dict1)\n",
-    "df1.loc[:, '$$\\Delta G^o\\,(kJ\\,mol^{-1})$$'] = df1['$$\\Delta G^o\\,(kJ\\,mol^{-1})$$'].map('{:.1f}'.format)\n",
+    " \n",
     "df1.loc[:, '$$\\Delta H^o\\,(kJ\\,mol^{-1})$$'] = df1['$$\\Delta H^o\\,(kJ\\,mol^{-1})$$'].map('{:.1f}'.format)\n",
     "df1.loc[:, '$$S^o\\,(J\\,mol^{-1}K^{-1})$$'] = df1['$$S^o\\,(J\\,mol^{-1}K^{-1})$$'].map('{:.1f}'.format)\n",
     "display(df1.style.hide_index())"
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,48 +354,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_6f923_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Formula</th>        <th class=\"col_heading level0 col1\" >$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_d27f2_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Formula</th>        <th class=\"col_heading level0 col1\" >$$\\Delta G_f^o\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta H_f^o\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^o\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_6f923_row0_col0\" class=\"data row0 col0\" >$$CaAl_2Si_2O_8$$</td>\n",
-       "                        <td id=\"T_6f923_row0_col1\" class=\"data row0 col1\" >-3991.86</td>\n",
-       "                        <td id=\"T_6f923_row0_col2\" class=\"data row0 col2\" >-4215.60</td>\n",
-       "                        <td id=\"T_6f923_row0_col3\" class=\"data row0 col3\" >205.43</td>\n",
+       "                                <td id=\"T_d27f2_row0_col0\" class=\"data row0 col0\" >$$CaAl_2Si_2O_8$$</td>\n",
+       "                        <td id=\"T_d27f2_row0_col1\" class=\"data row0 col1\" >-3991.86</td>\n",
+       "                        <td id=\"T_d27f2_row0_col2\" class=\"data row0 col2\" >-4215.60</td>\n",
+       "                        <td id=\"T_d27f2_row0_col3\" class=\"data row0 col3\" >205.43</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_6f923_row1_col0\" class=\"data row1 col0\" >$$Mg_2SiO_4$$</td>\n",
-       "                        <td id=\"T_6f923_row1_col1\" class=\"data row1 col1\" >-2056.70</td>\n",
-       "                        <td id=\"T_6f923_row1_col2\" class=\"data row1 col2\" >-2175.68</td>\n",
-       "                        <td id=\"T_6f923_row1_col3\" class=\"data row1 col3\" >95.19</td>\n",
+       "                                <td id=\"T_d27f2_row1_col0\" class=\"data row1 col0\" >$$Mg_2SiO_4$$</td>\n",
+       "                        <td id=\"T_d27f2_row1_col1\" class=\"data row1 col1\" >-2056.70</td>\n",
+       "                        <td id=\"T_d27f2_row1_col2\" class=\"data row1 col2\" >-2175.68</td>\n",
+       "                        <td id=\"T_d27f2_row1_col3\" class=\"data row1 col3\" >95.19</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_6f923_row2_col0\" class=\"data row2 col0\" >$$CaMgSi_2O_6$$</td>\n",
-       "                        <td id=\"T_6f923_row2_col1\" class=\"data row2 col1\" >-3029.22</td>\n",
-       "                        <td id=\"T_6f923_row2_col2\" class=\"data row2 col2\" >-3202.34</td>\n",
-       "                        <td id=\"T_6f923_row2_col3\" class=\"data row2 col3\" >143.09</td>\n",
+       "                                <td id=\"T_d27f2_row2_col0\" class=\"data row2 col0\" >$$CaMgSi_2O_6$$</td>\n",
+       "                        <td id=\"T_d27f2_row2_col1\" class=\"data row2 col1\" >-3029.22</td>\n",
+       "                        <td id=\"T_d27f2_row2_col2\" class=\"data row2 col2\" >-3202.34</td>\n",
+       "                        <td id=\"T_d27f2_row2_col3\" class=\"data row2 col3\" >143.09</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_6f923_row3_col0\" class=\"data row3 col0\" >$$MgAl_2O_4$$</td>\n",
-       "                        <td id=\"T_6f923_row3_col1\" class=\"data row3 col1\" >-2163.15</td>\n",
-       "                        <td id=\"T_6f923_row3_col2\" class=\"data row3 col2\" >-2288.01</td>\n",
-       "                        <td id=\"T_6f923_row3_col3\" class=\"data row3 col3\" >80.63</td>\n",
+       "                                <td id=\"T_d27f2_row3_col0\" class=\"data row3 col0\" >$$MgAl_2O_4$$</td>\n",
+       "                        <td id=\"T_d27f2_row3_col1\" class=\"data row3 col1\" >-2163.15</td>\n",
+       "                        <td id=\"T_d27f2_row3_col2\" class=\"data row3 col2\" >-2288.01</td>\n",
+       "                        <td id=\"T_d27f2_row3_col3\" class=\"data row3 col3\" >80.63</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_6f923_row4_col0\" class=\"data row4 col0\" >$$MgSiO_3$$</td>\n",
-       "                        <td id=\"T_6f923_row4_col1\" class=\"data row4 col1\" >-1459.92</td>\n",
-       "                        <td id=\"T_6f923_row4_col2\" class=\"data row4 col2\" >-1546.77</td>\n",
-       "                        <td id=\"T_6f923_row4_col3\" class=\"data row4 col3\" >67.86</td>\n",
+       "                                <td id=\"T_d27f2_row4_col0\" class=\"data row4 col0\" >$$MgSiO_3$$</td>\n",
+       "                        <td id=\"T_d27f2_row4_col1\" class=\"data row4 col1\" >-1459.92</td>\n",
+       "                        <td id=\"T_d27f2_row4_col2\" class=\"data row4 col2\" >-1546.77</td>\n",
+       "                        <td id=\"T_d27f2_row4_col3\" class=\"data row4 col3\" >67.86</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x24ffb8ea100>"
+       "<pandas.io.formats.style.Styler at 0x24ffb901c70>"
       ]
      },
      "metadata": {},
@@ -413,20 +413,20 @@
     "# create a dataframe\n",
     "dict2 = {\n",
     "    'Formula' : species_for_print,\n",
-    "    '$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$' : delta_G_data_2,\n",
-    "    '$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$' : delta_H_data_2,\n",
-    "    '$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$' : delta_S_data_2,\n",
+    "    '$$\\Delta G_f^o\\,(kJ\\,mol^{-1})$$' : delta_G_data_2,\n",
+    "    '$$\\Delta H_f^o\\,(kJ\\,mol^{-1})$$' : delta_H_data_2,\n",
+    "    '$$S^o\\,(J\\,mol^{-1}K^{-1})$$' : delta_S_data_2,\n",
     "}\n",
     "df2 = pd.DataFrame(dict2)\n",
-    "df2.loc[:, '$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$'] = df2['$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$'].map('{:.2f}'.format)\n",
-    "df2.loc[:, '$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$'] = df2['$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$'].map('{:.2f}'.format)\n",
-    "df2.loc[:, '$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$'] = df2['$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$'].map('{:.2f}'.format)\n",
+    "df2.loc[:, '$$\\Delta G_f^o\\,(kJ\\,mol^{-1})$$'] = df2['$$\\Delta G_f^o\\,(kJ\\,mol^{-1})$$'].map('{:.2f}'.format)\n",
+    "df2.loc[:, '$$\\Delta H_f^o\\,(kJ\\,mol^{-1})$$'] = df2['$$\\Delta H_f^o\\,(kJ\\,mol^{-1})$$'].map('{:.2f}'.format)\n",
+    "df2.loc[:, '$$S^o\\,(J\\,mol^{-1}K^{-1})$$'] = df2['$$S^o\\,(J\\,mol^{-1}K^{-1})$$'].map('{:.2f}'.format)\n",
     "display(df2.style.hide_index())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
